viewport overflow fix

--- a/app/App.module.scss
+++ b/app/App.module.scss
@@ -1,6 +1,8 @@
 @import "@styles/variables.scss";
 
 #AppWrapper {
+  overflow-x: hidden;
+
   @media (min-width: $desktopMinBreakpoint) {
     margin-left: $menuWidth;
   }
