--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -12,6 +12,5 @@
 
 body {
   background-color: $monoBgHard;
-  overflow-x: hidden;
   color: $monoText;
 }
